@@ -1,16 +1,20 @@
 CBC = ../bin/cbc
 CBFLAGS = -O -fPIC
 TARGET = libcbc.a
-OBJS = libcbc.o
+OBJS = stdarg.o
 
 .SUFFIXES:
-.SUFFIXES: .cb .o
+.SUFFIXES: .cb .s .o
 
 .cb.o:
 	$(CBC) $(CBFLAGS) -c $< -o $@
+.s.o:
+	$(CBC) -c $<
 
 $(TARGET): $(OBJS)
 	ar cr $(TARGET) $(OBJS)
+
+stdarg.o: stdarg.cb
 
 clean:
 	rm -f $(TARGET) *.o *.s
