@@ -1,3 +1,9 @@
+Sun Dec  7 23:25:25 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* lib/libcbc.cb -> lib/stdarg.cb
+
+	* lib/Makefile: ditto.
+
 Sun Dec  7 22:27:51 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/CodeGenerator.java: manage stack
